fixed card flip issue on firefox

--- a/src/components/create/create.css
+++ b/src/components/create/create.css
@@ -1,4 +1,4 @@
-/*    Flip controls   */
+/*    Card style, card flip   */
 .card-outer {
   width: 98vw;
   height: 66vw;
@@ -8,34 +8,39 @@
   background-color: transparent;
   perspective: 2000px;
   margin-bottom: 15px;
-}
-
-.card-front {
-  position: relative;
-  width: 100%;
-  height: 100%;
   transition: transform 0.9s;
   transform-style: preserve-3d;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
+  transform: rotateY(0deg);
 }
 
+.card-flip {
+  transform: rotateY(-180deg);
+}
+
+.card-front,
 .card-back {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  transition: transform 0.9s;
-  transform-style: preserve-3d;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
-  transform: rotateY(180deg);
-}
-
-/*    Card front    */
-.card-image-container {
   position: absolute;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  z-index: 2;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
+}
+
+.card-back {
+  display: flex;
+  padding: 3%;
+  background-color: white;
+  transform: rotateY(180deg);
+}
+
+.card-back:hover,
+.card-front:hover {
+  cursor: pointer;
+}
+
+.card-front img {
+  height: 100%;
+  width: 100%;
 }
 
 .card-flip-instruction {
@@ -44,16 +49,12 @@
   color: white;
   border-radius: 5%;
   background-color: #4d808b;
+  margin: 0;
   padding: 5px;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-}
-
-.card-image-container img {
-  height: 100%;
-  width: 100%;
 }
 
 .photo-credit {
@@ -68,19 +69,6 @@
 
 .photo-credit a {
   text-decoration: none;
-}
-
-/*    Card back   */
-.card-back-container {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  padding: 3%;
-  background-color: white;
-  transform: rotateY(180deg);
-  z-index: 100;
-  display: flex;
 }
 
 .card-message {
@@ -122,7 +110,7 @@
   right: 3%;
 }
 
-/*    Preview, Save, Send buttons   */
+/*  Preview, Save, Send buttons */
 .card-btn-wrapper {
   display: flex;
   justify-content: space-around;
@@ -143,7 +131,7 @@
   text-decoration: none;
 }
 
-/*    Image, Message, Recipient forms   */
+/*  Card forms */
 .create-page-form-wrapper {
   width: 98%;
   border: 2px lightgrey solid;
@@ -316,21 +304,16 @@
     height: 495px;
   }
 
-  /*  Hover to show flip instructions */
-  .card-image-container:hover {
+  /*  Hover to show flip instructions on desktop*/
+  .card-front:hover {
     opacity: 0.8;
-    cursor: pointer;
-  }
-
-  .card-back-container:hover {
-    cursor: pointer;
   }
 
   .card-flip-instruction {
     display: none;
   }
 
-  .card-image-container:hover > .card-flip-instruction {
+  .card-front:hover > .card-flip-instruction {
     display: block;
   }
 
